Voici le commentaire laissé par votre mentor sur votre session du 03/08/2023 :
1. Avancées de l’étudiant sur son projet depuis la dernière session

- convertit le code en ORM

2. Principaux sujets abordés pendant la session, obstacles à surmonter (le cas échéant), et actions nécessaires pour atteindre ces objectifs

3. Objectifs 'SMART' fixés par l'étudiant et le mentor pour la prochaine session

- views index bien filtrer pour ne pas avoir tous les tickets de la terre

- pouvoir modifier ses propres post
- cleaner le menu
- et cleaner les templates pour les inputs qui apparaissent pas dès le début "Click here to ..."

- relire le cahier des charges et vérifier à quel point loin ou pas des wireframes
- rajouter la petite poubelle

Note: REmplacement les deux prochaines semaines par autre mentor

--- a/LITReview/feeds/templates/create_ticket.html
+++ b/LITReview/feeds/templates/create_ticket.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 {% block content %}
-    <div><h4>Welcome {{user}}, here is the ticket from, <br>
-    from which you can create your tickets. </h4></div><hr>
+    <div><b>Welcome {{user}}, here is the ticket form, <br>
+    from which you can create your tickets. </b></div><hr>
     <div>{% include 'ticket_form.html' %}</div>
 {% endblock %}
 </body>
