--- a/LITReview/feeds/templates/created_tickets.html
+++ b/LITReview/feeds/templates/created_tickets.html
@@ -24,43 +24,38 @@
     #review_rating {
       background: lightblue;}
 </style>
-    <div class="spoiler">
-    <h4>Welcome {{user}}, here is your tickets list. <br>
-        Click here to add new tickets to this list. </h4>
-    <div style="visibility:hidden;height:0">
-    {% include 'ticket_form_2.html' %}</div></div><hr>
-    {% if tickets_count == 0 %}
-        <div class="spoiler">
-        <b>There isn't any ticket that you created yet, so click here to add new tickets. </b>
-        <div style="visibility:hidden;height:0">
-        {% include 'ticket_form_2.html' with ticket_id=ticket.id %}</div></div>
+    <details>
+    <summary><b>Welcome {{user}}, here is your tickets list. <br>
+        Click here to add new tickets to this list. </b></summary>
+    {% include 'ticket_form_2.html' %}</details><hr>
+    {% if tickets|length == 0 %}
+        <details>
+        <summary>There isn't any ticket that you created yet, so click here to add new tickets. </summary>
+        {% include 'ticket_form_2.html' with ticket_id=ticket.id %}</details>
     {% endif %}
     {% for ticket in tickets %}
-        {% if ticket.user == user %}
-            <div><i id="ticket_user">From {{ ticket.user }}, </i>
-            <i id="ticket_time_created">at {{ ticket.time_created }} </i>
-            <i id="ticket_title" >for {{ ticket.title }}. </i>
-            <i id="ticket_description">Query : {{ ticket.description }} <br></i>
+        <div><i id="ticket_user">From {{ ticket.user }}, </i>
+        <i id="ticket_time_created">at {{ ticket.time_created }} </i>
+        <i id="ticket_title" >for {{ ticket.title }}. </i>
+        <i id="ticket_description">Query : {{ ticket.description }} <br></i>
         {% if ticket.image %}
              <img src="{{ ticket.image.url }}" height="300" width="600">
         {% endif %}
         {% if not ticket.image %}
             <img src="/media/image-not-found-1-scaled-1150x647.png" height="300" width="600">
         {% endif %}
-        <div class="spoiler">
-            <b>Click here to add reviews to your own ticket no matter if there already are or not. </b>
-            <div style="visibility:hidden;height:0">
-            {% include 'review_form_2.html' with ticket_id=ticket.id %} </div></div>
-            <details><summary>Click here to see the already existing reviews for this ticket. </summary>
-            {% for review in reviews %}
-                {% with ticket as ticket %}
-                {% with review as review %}
-                    <div id="review_datas">{% include 'included_reviews.html' %}</div>
-                {% endwith %}
-                {% endwith %}
-            {% endfor %}
-            </details><hr></div>
-        {% endif %}
+        <details>
+        <summary>Click here to add reviews to your own ticket no matter if there already are or not. </summary>
+        {% include 'review_form_2.html' with ticket_id=ticket.id %}</details>
+        <details><summary>Click here to see the already existing reviews for this ticket. </summary>
+        {% for review in reviews %}
+            {% with ticket as ticket %}
+            {% with review as review %}
+                <div id="review_datas">{% include 'included_reviews.html' %}</div>
+            {% endwith %}
+            {% endwith %}
+        {% endfor %}
+        </details><hr></div>
     {% endfor %}
 <script>
     var spoilers = document.getElementsByClassName("spoiler");
