--- a/LITReview/feeds/templates/old_files/follows_reviews_old.html
+++ b/LITReview/feeds/templates/old_files/follows_reviews_old.html
@@ -25,13 +25,13 @@
     #review_rating {
       background: lightblue;}
 </style>
-    <div><b>Welcome {{user}}, here is the tickets list, <br>
-    from which your follows submitted reviews. </b></div><hr>
-    {% if reviews|length == 0 %}
+    <div><h4>Welcome {{user}}, here is the tickets list, <br>
+    from which your follows submitted reviews. </h4></div><hr>
+    {% if not reviewed_tickets %}
         <a href="{% url 'index' %}">
         <b>There is no ticket that your follows reviewed, so take a look on all the tickets here. </b></a>
     {% endif %}
-    {% for ticket in tickets %}
+    {% for ticket in reviewed_tickets %}
         <div><i id="ticket_user">From {{ ticket.user }}, </i>
         <i id="ticket_time_created">at {{ ticket.time_created }} </i>
         <i id="ticket_title" >for {{ ticket.title }}. </i>
@@ -44,9 +44,10 @@
         {% endif %}
         {% for review in reviews %}
             {% if forloop.counter == reviews|length %}
-                <details>
-                <summary>Click here to add reviews to this ticket in addition to those your follows submitted. </summary>
-                {% include 'review_form_5.html' with ticket_id=ticket.id %}</details>
+                <div class="spoiler">
+                <b>Click here to add reviews to this ticket in addition to those your follows submitted. </b>
+                <div style="visibility:hidden;height:0">
+                {% include 'review_form_5.html' with ticket_id=ticket.id %}</div></div>
             {% endif %}
         {% endfor %}
         <details><summary>Click here to see the reviews your follows submitted for this ticket. </summary>
@@ -54,7 +55,7 @@
             {% with ticket as ticket %}
             {% with review as review %}
             {% with user_follows as user_follows %}
-                <div id="review_datas">{% include 'included_reviews.html' %}</div>
+                <div id="review_datas">{% include 'included_reviews_3.html' %}</div>
             {% endwith %}
             {% endwith %}
             {% endwith %}
