--- a/LITReview/feeds/templates/old_files/manage_follows_old.html
+++ b/LITReview/feeds/templates/old_files/manage_follows_old.html
@@ -10,27 +10,37 @@
     .follows_datas {
       background: lightblue;}
 </style>
-    <details>
-    <summary><b>Welcome {{user}}, here is your follows. <br>
-    Click here to add users to your follows. </b></summary>
-    {% include 'follow_form.html' %}</details><hr>
+    <div class="spoiler">
+    <h4>Welcome {{user}}, here is your follows. <br>Click here to add users to your follows. </h4>
+    <div style="visibility:hidden;height:0">
+    {% include 'follow_form.html' %}</div></div><hr>
     <b>People that I follow : </b>
     <ul class="follows_datas">
-        {% if followed_users|length == 0 %}
+        {% if followings_count == 0 %}
             <li>There isn't any user that you follow yet. </li>
         {% endif %}
-        {% for user in followed_users %}
-            <li><i>{{user}}</i></li>
+        {% for follow in user_follows %}
+            {% if follow.user == user %}
+                <li><i>{{follow.followed_user}}</i></li>
+            {% endif %}
         {% endfor %}
+        {% if not user_follows %}
+            <li>There isn't any user that you follow yet. </li>
+        {% endif %}
     </ul>
     <b>People that follow me : </b>
     <ul class="follows_datas">
-        {% if subbed_users|length == 0 %}
+        {% if followers_count == 0 %}
             <li>There isn't any user that follow you yet. </li>
         {% endif %}
-        {% for user in subbed_users %}
-            <li><i>{{user}}</i></li>
+        {% for follow in user_follows %}
+            {% if follow.followed_user == user %}
+                <li><i>{{follow.user}}</i></li>
+            {% endif %}
         {% endfor %}
+        {% if not user_follows %}
+            <li>There isn't any user that follow you yet. </li>
+        {% endif %}
     </ul>
 <script>
     var spoilers = document.getElementsByClassName("spoiler");
