1. Avancées de l’étudiant sur son projet depuis la dernière session
L'étudiant a légèrement avancé depuis la dernière session.

Mise à jour de l'interface web (terminé).
2. Principaux sujets abordés pendant la session, obstacles à surmonter (le cas échéant), et actions nécessaires pour atteindre ces objectifs

Échange sur le travail effectué.
3. Objectifs 'SMART' fixés par l'étudiant et le mentor pour la prochaine session

Mettre en place la création de ticket avec review.
Mettre en place le système de désabonnement.

--- a/LITReview/feeds/templates/create_ticket.html
+++ b/LITReview/feeds/templates/create_ticket.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div><b>Welcome {{user}}, here is the ticket form, <br>
     from which you can create your tickets. </b></div><hr>
-    <div>{% include 'ticket_form.html' %}</div>
+    <div>{% include 'ticket_form_3.html' %}</div>
 {% endblock %}
 </body>
 </html>
