--- a/LITReview/feeds/templates/create_review.html
+++ b/LITReview/feeds/templates/create_review.html
@@ -1,13 +1,28 @@
-<html lang="en">
+{% extends 'partials/base.html' %}
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}LITReview Home{% endblock %}</title>
 </head>
 <body>
-<form method="POST" action="{% url 'follows_posts' %}">
+{% block content %}
+<div><b>Welcome {{user}}, here is the review form, <br>
+from which you can create your reviews. </b></div><hr>
+<form method="POST" action="{% url 'index' %}">
 {% csrf_token %}
-  <br>
   <div class="form-group">
+    <b>Enter a title : </b><br>
+    {{ ticket_form.title }}<br>
+  </div>
+  <div class="form-group">
+    <b>Enter a description : </b><br>
+    {{ ticket_form.description }}<br>
+  </div>
+  <div class="form-group">
+    <b>Choose an image : </b><br>
+    {{ ticket_form.image }}
+  </div><hr>
+    <div class="form-group">
     <b>Enter a rating (Max 5) : </b><br>
     {{ review_form.rating }}<br>
   </div>
@@ -23,8 +38,10 @@
     <input type="checkbox" required class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Confirm the Review</label>
   </div>
-  <input type="hidden" name="ticket" value="{{ post.id }}" />
+  <input type="hidden" name="ticket" value="1" />
+  <input type="hidden" name="create_review" value="yes" />
   <button type="submit" class="btn btn-primary">Submit the Review</button>
 </form>
+{% endblock %}
 </body>
 </html>
