--- a/LITReview/feeds/templates/edit_ticket.html
+++ b/LITReview/feeds/templates/edit_ticket.html
@@ -11,15 +11,15 @@
     <form method="POST" action="{% url 'edit_ticket' %}" enctype="multipart/form-data">
     {% csrf_token %}
       <div class="form-group">
-        <b>Choose a title: </b><br>
-        {{ ticket_form.title }}
+        <b>Enter a title : </b><br>
+        {{ ticket_form.title }}<br>
       </div>
       <div class="form-group">
-        <b>Choose a description: </b><br>
-        {{ ticket_form.description }}
+        <b>Enter a description : </b><br>
+        {{ ticket_form.description }}<br>
       </div>
       <div class="form-group">
-        <b>Choose an image: </b><br>
+        <b>Choose an image : </b><br>
         {{ ticket_form.image }}
       </div>
       <div class="form-check">
