--- a/LITReview/feeds/templates/old_files/created_tickets_bak.html
+++ b/LITReview/feeds/templates/old_files/created_tickets_bak.html
@@ -7,6 +7,8 @@
 <body>
 {% block content %}
 <style>
+    form {
+        display: inline-block;}
     #ticket_title {
       background: lightblue;}
     #ticket_user {
@@ -37,7 +39,17 @@
         <div><i id="ticket_user">From {{ ticket.user }}, </i>
         <i id="ticket_time_created">at {{ ticket.time_created }} </i>
         <i id="ticket_title" >for {{ ticket.title }}. </i>
-        <i id="ticket_description">Query : {{ ticket.description }} <br></i>
+        <i id="ticket_description">Query : {{ ticket.description }} </i>
+        <form method="POST" action="{% url 'edit_ticket' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="hidden" name="ticket" value="{{ ticket.id }}" />
+            <button type="submit">edit</button>
+        </form>
+        <form method="POST" action="{% url 'delete_ticket' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="hidden" name="ticket" value="{{ ticket.id }}" />
+            <button type="submit">delete</button>
+        </form><br>
         {% if ticket.image %}
              <img src="{{ ticket.image.url }}" height="300" width="600">
         {% endif %}
