--- a/LITReview/feeds/templates/old_files/online_follows.html
+++ b/LITReview/feeds/templates/old_files/online_follows.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}LITReview Home{% endblock %}</title>
+    <link href="static/style.css" rel="stylesheet" />
 </head>
 <body>
 {% block content %}
-<style>
-    .follows_datas {
-      background: lightblue;}
-</style>
     <details>
     <summary><b>Welcome {{user}}, here is online follows. <br>
     Click here to unsubscribe from your follows. </b></summary>
@@ -22,7 +19,7 @@
         {% for follow in connected_follows %}
             <li><i>{{ follow }}</i></li>
         {% endfor %}
-    </ul>
+    </ul><hr>
     <b>All the people that I follow : </b>
     <ul class="follows_datas">
         {% if followed_users|length == 0 %}
@@ -31,22 +28,7 @@
         {% for follow in followed_users %}
             <li><i>{{ follow }}</i></li>
         {% endfor %}
-    </ul>
-<script>
-    var spoilers = document.getElementsByClassName("spoiler");
-    var spoilClick = function(){
-        pchild=this.getElementsByTagName('div');
-        if(pchild[0].style.visibility!='hidden'){
-            pchild[0].style.visibility='hidden';
-            pchild[0].style.height='0';
-        }else{
-            pchild[0].style.visibility=''; pchild[0].style.height=''
-        }
-    }
-    for (var i = 0; i < spoilers.length; i++) {
-    spoilers[i].addEventListener('click', spoilClick, false);
-    }
-</script>
+    </ul><hr>
 {% endblock %}
 </body>
 </html>
