--- a/LITReview/feeds/templates/review_form.html
+++ b/LITReview/feeds/templates/review_form.html
@@ -1,28 +1,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title %}LITReview Home{% endblock %}</title>
 </head>
 <body>
 <form method="POST" action="{% url 'index' %}">
 {% csrf_token %}
+  <br>
   <div class="form-group">
-    <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-           placeholder="Enter 5 Rank Rating" name="rating">
+    <b>Enter a rating (Max 5) : </b><br>
+    {{ review_form.rating }}<br>
   </div>
   <div class="form-group">
-    <input type="text" required class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
-           placeholder="Enter Headline" name="headline">
+    <b>Enter a headline : </b><br>
+    {{ review_form.headline }}<br>
   </div>
   <div class="form-group">
-    <input type="text" required class="form-control" id="exampleInputPassword1"
-           placeholder="Enter Body" name="body">
+    <b>Enter a body : </b><br>
+    {{ review_form.body }}
   </div>
   <div class="form-check">
     <input type="checkbox" required class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1">Confirm the Review</label>
   </div>
-  <input type="hidden" name="ticket" value="{{ ticket_id }}" />
+  <input type="hidden" name="ticket" value="{{ post.id }}" />
   <button type="submit" class="btn btn-primary">Submit the Review</button>
 </form>
 </body>
