--- a/LITReview/feeds/templates/ticket_form.html
+++ b/LITReview/feeds/templates/ticket_form.html
@@ -1,21 +1,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{% block title %}LITReview Home{% endblock %}</title>
 </head>
 <body>
 <form method="POST" action="{% url 'index' %}" enctype="multipart/form-data">
 {% csrf_token %}
+  <br>
   <div class="form-group">
-    <input type="text" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-           placeholder="Enter Title" name="title">
+    <b>Enter a title : </b><br>
+    {{ ticket_form.title }}<br>
   </div>
   <div class="form-group">
-    <input type="text" required class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp"
-           placeholder="Enter Description" name="description">
+    <b>Enter a description : </b><br>
+    {{ ticket_form.description }}<br>
   </div>
   <div class="form-group">
-    <b>Choose an image: </b><br>
+    <b>Choose an image : </b><br>
     {{ ticket_form.image }}
   </div>
   <div class="form-check">
